--- a/index.html
+++ b/index.html
@@ -41,6 +41,85 @@
             </li>
           </ul>
         </nav>
+        <button class="button mobile-menu-open js-open-menu" type="button">
+          <svg class="mobile-menu-open-icon" width="32" height="22">
+            <use href="./images/sprite.svg#icon-menu-hamburger"></use>
+          </svg>
+        </button>
+        <!-- MOBILE MENU -->
+        <div class="mobile-menu js-menu-container">
+          <div class="container mobile-menu-container">
+            <button
+              class="button mobile-close-button js-close-menu"
+              type="button"
+            >
+              <svg class="mobile-mobile-button-icon" width="8" height="8">
+                <use href="./images/sprite.svg#icon-close-modal"></use>
+              </svg>
+            </button>
+            <ul class="mobile-menu-list list">
+              <li class="mobile-menu-item">
+                <a class="link mobile-menu-link current" href="./index.html"
+                  >Studio</a
+                >
+              </li>
+              <li class="mobile-menu-item">
+                <a class="link mobile-menu-link" href="./portfolio.html"
+                  >Portfolio</a
+                >
+              </li>
+              <li class="mobile-menu-item">
+                <a class="link mobile-menu-link" href="#">Contacts</a>
+              </li>
+            </ul>
+            <ul class="list mobile-contacts-list">
+              <li class="mobile-contacts-tel">
+                <a
+                  class="link mobile-contacts-tel-link"
+                  href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+              <li class="mobile-contacts-email">
+                <a
+                  class="link mobile-contacts-email-link"
+                  href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+            </ul>
+            <ul class="list mobile-social-list">
+              <li class="mobile-social-item">
+                <a class="mobile-social-link" href="#">
+                  <svg class="mobile-social-icon" width="24" height="24">
+                    <use href="./images/sprite.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mobile-social-item">
+                <a class="mobile-social-link" href="#">
+                  <svg class="mobile-social-icon" width="24" height="24">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mobile-social-item">
+                <a class="mobile-social-link" href="#">
+                  <svg class="mobile-social-icon" width="24" height="24">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mobile-social-item">
+                <a class="mobile-social-link" href="#">
+                  <svg class="mobile-social-icon" width="24" height="24">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
         <!-- HEADER CONTACTS -->
         <ul class="list contacts">
           <li class="item">
@@ -125,14 +204,18 @@
         </div>
       </section>
       <!-- DIRECTIONS OF WORK -->
-      <section class="section">
+      <section class="section section-direction">
         <div class="container direction">
           <h2 class="direction-title">What are we doing</h2>
           <ul class="list direction-list">
             <li class="item">
               <img
-                src="./images/direction/img-desktop.jpg"
+                src="./images/direction/img-site.jpg"
                 alt="image of desktop app on pc"
+                srcset="
+                  ./images/direction/img-site.jpg    1x,
+                  ./images/direction/img-site@2x.jpg 2x
+                "
                 width="360"
                 height="300"
               />
@@ -141,6 +224,10 @@
               <img
                 src="./images/direction/img-chat.jpg"
                 alt="image of chat on phone"
+                srcset="
+                  ./images/direction/img-chat.jpg    1x,
+                  ./images/direction/img-chat@2x.jpg 2x
+                "
                 width="360"
                 height="300"
               />
@@ -149,6 +236,10 @@
               <img
                 src="./images/direction/img-app.jpg"
                 alt="image of app on phone"
+                srcset="
+                  ./images/direction/img-app.jpg    1x,
+                  ./images/direction/img-app@2x.jpg 2x
+                "
                 width="360"
                 height="300"
               />
@@ -161,10 +252,14 @@
         <div class="container">
           <h2 class="team-title">Our Team</h2>
           <ul class="list team-list">
-            <li class="item">
+            <li class="team-item">
               <img
                 src="./images/team/img-mark-guerrero.jpg"
                 alt="photo of product designer"
+                srcset="
+                  ./images/team/img-mark-guerrero.jpg    1x,
+                  ./images/team/img-mark-guerrero@2x.jpg 2x
+                "
                 width="264"
                 height="260"
               />
@@ -203,10 +298,14 @@
                 </ul>
               </div>
             </li>
-            <li class="item">
+            <li class="team-item">
               <img
                 src="./images/team/img-tom-ford.jpg"
                 alt="photo of frontend developer"
+                srcset="
+                  ./images/team/img-tom-ford.jpg    1x,
+                  ./images/team/img-tom-ford@2x.jpg 2x
+                "
                 width="264"
                 height="260"
               />
@@ -245,10 +344,14 @@
                 </ul>
               </div>
             </li>
-            <li class="item">
+            <li class="team-item">
               <img
                 src="./images/team/img-camila-garcia.jpg"
                 alt="photo of marketing manager"
+                srcset="
+                  ./images/team/img-camila-garcia.jpg    1x,
+                  ./images/team/img-camila-garcia@2x.jpg 2x
+                "
                 width="264"
                 height="260"
               />
@@ -287,8 +390,12 @@
                 </ul>
               </div>
             </li>
-            <li class="item">
+            <li class="team-item">
               <img
+                srcset="
+                  ./images/team/img-daniel-wilson.jpg    1x,
+                  ./images/team/img-daniel-wilson@2x.jpg 2x
+                "
                 src="./images/team/img-daniel-wilson.jpg"
                 alt="photo of UI designer"
                 width="264"
@@ -332,57 +439,57 @@
           </ul>
         </div>
       </section>
+      <!-- CUSTOMERS -->
+      <section class="section customers-section">
+        <div class="container">
+          <h2 class="customers-title">Customers</h2>
+          <ul class="list customers-list">
+            <li class="customers-item">
+              <a class="customers-link" href="#">
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/sprite.svg#icon-company-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a class="customers-link" href="#">
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/sprite.svg#icon-company-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a class="customers-link" href="#">
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/sprite.svg#icon-company-3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a class="customers-link" href="#">
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/sprite.svg#icon-company-4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a class="customers-link" href="#">
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/sprite.svg#icon-company-5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a class="customers-link" href="#">
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/sprite.svg#icon-company-6"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
-    <!-- CUSTOMERS -->
-    <section class="section customers-section">
-      <div class="container">
-        <h2 class="customers-title">Customers</h2>
-        <ul class="list customers-list">
-          <li class="customers-item">
-            <a class="customers-link" href="#">
-              <svg class="customers-icon" width="104" height="56">
-                <use href="./images/sprite.svg#icon-company-1"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="customers-item">
-            <a class="customers-link" href="#">
-              <svg class="customers-icon" width="104" height="56">
-                <use href="./images/sprite.svg#icon-company-2"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="customers-item">
-            <a class="customers-link" href="#">
-              <svg class="customers-icon" width="104" height="56">
-                <use href="./images/sprite.svg#icon-company-3"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="customers-item">
-            <a class="customers-link" href="#">
-              <svg class="customers-icon" width="104" height="56">
-                <use href="./images/sprite.svg#icon-company-4"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="customers-item">
-            <a class="customers-link" href="#">
-              <svg class="customers-icon" width="104" height="56">
-                <use href="./images/sprite.svg#icon-company-5"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="customers-item">
-            <a class="customers-link" href="#">
-              <svg class="customers-icon" width="104" height="56">
-                <use href="./images/sprite.svg#icon-company-6"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </section>
     <!-- FOOTER -->
     <footer class="footer">
       <div class="container footer-container">
@@ -430,7 +537,6 @@
             </li>
           </ul>
         </div>
-        <!-- SUBSCRIBE FORM -->
         <form class="subscribe-form">
           <p class="subscribe-form-title">Subscribe</p>
           <label>
@@ -463,7 +569,6 @@
             <use href="./images/sprite.svg#icon-close-modal"></use>
           </svg>
         </button>
-        <!-- MODAL FORM -->
         <form class="modal-form">
           <p class="modal-form-title">
             Leave your contacts and we will call you back
@@ -543,6 +648,7 @@
         </form>
       </div>
     </div>
+    <script src="js/mobile-menu.js" defer></script>
     <script src="./js/modal.js"></script>
   </body>
 </html>
