--- a/portfolio.html
+++ b/portfolio.html
@@ -651,6 +651,7 @@
         </form>
       </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/body-scroll-lock@4.0.0-beta.0/lib/bodyScrollLock.min.js"></script>
     <script src="js/mobile-menu.js" defer></script>
   </body>
 </html>
