--- a/index.html
+++ b/index.html
@@ -648,6 +648,7 @@
         </form>
       </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/body-scroll-lock@4.0.0-beta.0/lib/bodyScrollLock.min.js"></script>
     <script src="js/mobile-menu.js" defer></script>
     <script src="./js/modal.js"></script>
   </body>
