--- a/portfolio.html
+++ b/portfolio.html
@@ -175,6 +175,7 @@
                         ./images/portfolio/img-banking-app-desktop.jpg    1x,
                         ./images/portfolio/img-banking-app-desktop@2x.jpg 2x
                       "
+                      type="image/jpeg"
                     />
                     <source
                       media="(min-width: 768px)"
@@ -182,6 +183,7 @@
                         ./images/portfolio/img-banking-app-tablet.jpg    1x,
                         ./images/portfolio/img-banking-app-tablet@2x.jpg 2x
                       "
+                      type="image/jpeg"
                     />
                     <source
                       media="(min-width: 320px)"
@@ -189,12 +191,15 @@
                         ./images/portfolio/img-banking-app-mobile.jpg    1x,
                         ./images/portfolio/img-banking-app-mobile@2x.jpg 2x
                       "
+                      type="image/jpeg"
                     />
                     <img
                       class="potfolio-img"
                       src="./images/portfolio/img-banking-app-mobile.jpg"
                       alt="image of Banking App Interface Concept project"
                       width="360"
+                      height="300"
+                      loading="lazy"
                     />
                   </picture>
                   <p class="portfolio-overlay">
@@ -243,6 +248,8 @@
                       src="./images/portfolio/img-cashless-payment-mobile.jpg"
                       alt="image of Cashless Payment project"
                       width="360"
+                      height="300"
+                      loading="lazy"
                     />
                   </picture>
                   <p class="portfolio-overlay">
@@ -289,6 +296,8 @@
                       src="./images/portfolio/img-maditation-app-mobile.jpg"
                       alt="image of Meditaion App project"
                       width="360"
+                      height="300"
+                      loading="lazy"
                     />
                   </picture>
                   <p class="portfolio-overlay">
@@ -335,6 +344,8 @@
                       src="./images/portfolio/img-taxi-service-mobile.jpg"
                       alt="image of Taxi Service project"
                       width="360"
+                      height="300"
+                      loading="lazy"
                     />
                   </picture>
                   <p class="portfolio-overlay">
@@ -381,6 +392,8 @@
                       src="./images/portfolio/img-screen-illustration-mobile.jpg"
                       alt="image of Screen Illustrations project"
                       width="360"
+                      height="300"
+                      loading="lazy"
                     />
                   </picture>
                   <p class="portfolio-overlay">
@@ -427,6 +440,8 @@
                       src="./images/portfolio/img-online-cources-mobile.jpg"
                       alt="image of Online Courses project"
                       width="360"
+                      height="300"
+                      loading="lazy"
                     />
                   </picture>
                   <p class="portfolio-overlay">
@@ -473,6 +488,8 @@
                       src="./images/portfolio/img-instagram-stories-concept-mobile.jpg"
                       alt="image of Instagram Stories Concept project"
                       width="360"
+                      height="300"
+                      loading="lazy"
                     />
                   </picture>
                   <p class="portfolio-overlay">
@@ -519,6 +536,8 @@
                       src="./images/portfolio/img-organic-food-mobile.jpg"
                       alt="image of Organic Food project"
                       width="360"
+                      height="300"
+                      loading="lazy"
                     />
                   </picture>
                   <p class="portfolio-overlay">
@@ -565,6 +584,8 @@
                       src="./images/portfolio/img-fresh-coffee-mobile.jpg"
                       alt="image of Fresh Coffee project"
                       width="360"
+                      height="300"
+                      loading="lazy"
                     />
                   </picture>
                   <p class="portfolio-overlay">
