--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@
                 "
                 width="264"
                 height="260"
+                loading="lazy"
               />
               <div class="team-cards">
                 <h3 class="team-subtitle">Mark Guerrero</h3>
@@ -308,6 +309,7 @@
                 "
                 width="264"
                 height="260"
+                loading="lazy"
               />
               <div class="team-cards">
                 <h3 class="team-subtitle">Tom Ford</h3>
@@ -354,6 +356,7 @@
                 "
                 width="264"
                 height="260"
+                loading="lazy"
               />
               <div class="team-cards">
                 <h3 class="team-subtitle">Camila Garcia</h3>
@@ -400,6 +403,7 @@
                 alt="photo of UI designer"
                 width="264"
                 height="260"
+                loading="lazy"
               />
               <div class="team-cards">
                 <h3 class="team-subtitle">Daniel Wilson</h3>
