Chenged index.html, styles.css

--- a/index.html
+++ b/index.html
@@ -541,24 +541,26 @@
             </li>
           </ul>
         </div>
-        <form class="subscribe-form">
-          <p class="subscribe-form-title">Subscribe</p>
-          <label>
-            <input
-              class="subscribe-form-input"
-              name="subscribe_email"
-              type="email"
-              placeholder="E-mail"
-              required
-            />
-          </label>
-          <button class="button subscribe-button" type="submit">
-            <span class="subscribe-text-button">Subscribe</span>
-            <svg class="subscribe-footer-icon" width="24" height="20">
-              <use href="./images/sprite.svg#icon-subscribe"></use>
-            </svg>
-          </button>
-        </form>
+        <div class="footer-subscribe-form">
+          <form class="subscribe-form">
+            <p class="subscribe-form-title">Subscribe</p>
+            <label>
+              <input
+                class="subscribe-form-input"
+                name="subscribe_email"
+                type="email"
+                placeholder="E-mail"
+                required
+              />
+            </label>
+            <button class="button subscribe-button" type="submit">
+              <span class="subscribe-text-button">Subscribe</span>
+              <svg class="subscribe-footer-icon" width="24" height="20">
+                <use href="./images/sprite.svg#icon-subscribe"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
     <!-- MODAL WINDOW -->
